# buckwheat

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci_tests.yml
buckwheat/: __init__.py  dataclasses.py  main.py  run.py  saver.py  saving.py  tokenizer.py  tokenizing.py  utils.py
buckwheat/extractors/: __init__.py  base.py  entities.py  pygments.py  tokenizer.py  tree_sitter.py  utils.py
buckwheat/language_recognition/: __init__.py  __main__.py  utils.py
buckwheat/parsing/: __init__.py  utils.py
buckwheat/pipeline/: extraction.py  filtration.py  input.py  output.py  premade.py
buckwheat/tests/: test_parsing.py  test_pipeline.py  test_subtokenizer.py  test_subtokenizing.py  test_tokenizer.py
docs/: conf.py  index.rst
identifiers_extractor/: parsing.py  run.py
identifiers_extractor/experiments/: parsing.ipynb
identifiers_extractor/language_recognition/: utils.py
identifiers_extractor/parsers/: utils.py
identifiers_extractor/tests/: test_parsing.py  test_pipeline.py
tests/: base.py  conftest.py  test_build_extractors.py  test_extractors.py  test_output_transforms.py  test_pipelines.py  test_repository_transforms.py
tests/bigartm_tests/: LDA.ipynb  hARTM.ipynb
tests/tree-sitter_tests/: functions.ipynb  identifiers.ipynb
topic_dynamics/: modeling.py  parsing.py  run.py  slicing.py  subtokenizing.py
topic_dynamics/experiments/: identifiers.ipynb
topic_dynamics/language_recognition/: utils.py
tree-sitter/: compileGrammars.py
(+52 files in other folders)
