[tool.poetry]
name = "preprocess"
version = "0.1.0"
description = ""
authors = ["Vasilev Maxim <maxim.vasilev@jetbrains.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygments = "^2.6.1"
tree-sitter = "^0.1.1"
PyStemmer = "^2.0.1"
joblib = "^0.16.0"
Cython = "^0.29.21"
dask = {extras = ["bag"], version = "^2.21.0"}
gitpython = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
